--- a/2.1-ordenacaojs/styles/styles.css
+++ b/2.1-ordenacaojs/styles/styles.css
@@ -1,26 +1,43 @@
 * {
-    box-sizing: border-box;
-    padding: 0;
-    font-family: Arial, Helvetica, sans-serif;
+  box-sizing: border-box;
+  padding: 0;
+  font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
-#tabela{
-    border-collapse: collapse;
-    border: 1px solid black;
+header {
+  gap: 0.5rem;
 }
 
-th, td {
-    border: 1px solid black;
-    padding: 0.5rem 1.5rem;
+#tabela {
+  border-collapse: collapse;
+  border: 1px solid black;
 }
 
-#busca {
-    padding: 0.5rem 1.5rem;
-    border-radius: 5px;
+th,
+td {
+  border: 1px solid black;
+  padding: 0.5rem 1.5rem;
 }
 
-.tabela-container{
-    display: inline-flex;
-    gap: 1rem;
-    flex-direction: column;
+.tabela-container {
+  display: inline-flex;
+  gap: 1rem;
+  flex-direction: column;
+  width: 50%;
+}
+
+body {
+  font-family: sans-serif;
+  padding: 2rem;
+}
+a {
+  text-decoration: none;
+  color: black;
+}
+input,
+select,
+button,
+textarea {
+  margin: 0.5rem 0;
+  padding: 0.5rem;
 }
